remove weebly references

--- a/thairapymelville.weebly.com/contact.html
+++ b/thairapymelville.weebly.com/contact.html
@@ -102,14 +102,14 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 			document.documentElement.initCustomerAccountsModels++
 		}
 		</script>
-		<script type="text/javascript"> _W = _W || {}; _W.securePrefix='thairapymelville.weebly.com'; </script><script>_W = _W || {};
+		<script type="text/javascript"> _W = _W || {}; _W.securePrefix='thairapymelville.com'; </script><script>_W = _W || {};
 			_W.customerLocale = "en_CA";
 			_W.storeName = null;
 			_W.storeCountry = "CA";
 			_W.storeCurrency = "CAD";
 			_W.storeEuPrivacyPolicyUrl = "";
 			com_currentSite = "667415467607056676";
-			com_userID = "125784283";</script><script type="text/javascript">_W.configDomain = "www.weebly.com";</script><script>_W.relinquish && _W.relinquish()</script>
+			com_userID = "125784283";</script><script type="text/javascript">_W.configDomain = "www.thairapymelville.com";</script><script>_W.relinquish && _W.relinquish()</script>
 <script type="text/javascript" src="../cdn2.editmysite.com/js/lang/en/stla22a.js?buildTime=1559844374&amp;"></script><script> _W.themePlugins = [];</script><script type="text/javascript"> _W.recaptchaUrl = "../www.google.com/recaptcha/api.js"; </script><script type="text/javascript"><!--
 	
 	
@@ -270,7 +270,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 <div style="height: 10px; overflow: hidden;"></div></div>
 
 <div>
-	<form enctype="multipart/form-data" action="http://www.weebly.com/weebly/apps/formSubmit.php" method="POST" id="form-608007415352080735">
+	<form enctype="multipart/form-data" action="http://www.thairapymelville.com/weebly/apps/formSubmit.php" method="POST" id="form-608007415352080735">
 		<div id="608007415352080735-form-parent" class="wsite-form-container"
 				 style="margin-top:10px;">
 			<ul class="formlist" id="608007415352080735-form-list">
