--- a/thairapymelville.weebly.com/index.html
+++ b/thairapymelville.weebly.com/index.html
@@ -101,7 +101,7 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 			document.documentElement.initCustomerAccountsModels++
 		}
 		</script>
-		<script type="text/javascript"> _W = _W || {}; _W.securePrefix='thairapymelville.weebly.com'; </script><script>_W = _W || {};
+		<script type="text/javascript"> _W = _W || {}; _W.securePrefix='thairapymelville.com'; </script><script>_W = _W || {};
 			_W.customerLocale = "en_CA";
 			_W.storeName = null;
 			_W.storeCountry = "CA";
