--- a/thairapymelville.weebly.com/store/checkout/indexfc50.html
+++ b/thairapymelville.weebly.com/store/checkout/indexfc50.html
@@ -42,14 +42,14 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 			document.documentElement.initCustomerAccountsModels++
 		}
 		</script>
-		<script type="text/javascript"> _W = _W || {}; _W.securePrefix='thairapymelville.weebly.com'; </script><script>_W = _W || {};
+		<script type="text/javascript"> _W = _W || {}; _W.securePrefix='thairapymelville.com'; </script><script>_W = _W || {};
 			_W.customerLocale = "en";
 			_W.storeName = null;
 			_W.storeCountry = "CA";
 			_W.storeCurrency = "CAD";
 			_W.storeEuPrivacyPolicyUrl = "";
 			com_currentSite = "667415467607056676";
-			com_userID = "125784283";</script><script type="text/javascript">_W.configDomain = "www.weebly.com";</script><script>_W.relinquish && _W.relinquish()</script>
+			com_userID = "125784283";</script><script type="text/javascript">_W.configDomain = "www.thairapymelville.com";</script><script>_W.relinquish && _W.relinquish()</script>
 <script type="text/javascript" src="../../../cdn2.editmysite.com/js/lang/en/stl69f4.js?buildTime=1574724498&amp;"></script><script> _W.themePlugins = [];</script><script type="text/javascript"> _W.recaptchaUrl = "../../../www.google.com/recaptcha/api.js"; </script>
 		
 		
