resolve mixed protocol content changed http to https for resources (i.e. fonts)

--- a/web/index.html
+++ b/web/index.html
@@ -532,8 +532,8 @@ body.wsite-background {background-attachment: fixed !important;}.wsite-backgroun
 		font-style: normal;
 		font-weight: 500;
 		src:
-			url("http://cdn2.editmysite.com/fonts/SQ_Market/sqmarket-medium.woff2") format("woff2"),
-			url("http://cdn2.editmysite.com/fonts/SQ_Market/sqmarket-medium.woff") format("woff");
+			url("https://cdn2.editmysite.com/fonts/SQ_Market/sqmarket-medium.woff2") format("woff2"),
+			url("https://cdn2.editmysite.com/fonts/SQ_Market/sqmarket-medium.woff") format("woff");
 	}
 </style>
 
