--- a/web/whats-new/welcome-to-our-new-site.html
+++ b/web/whats-new/welcome-to-our-new-site.html
@@ -319,8 +319,8 @@ _W.setup_model_rpc({"rpc_namespace":"_W.CustomerAccounts.RPC","model_namespace":
 		font-style: normal;
 		font-weight: 500;
 		src:
-			url("http://cdn2.editmysite.com/fonts/SQ_Market/sqmarket-medium.woff2") format("woff2"),
-			url("http://cdn2.editmysite.com/fonts/SQ_Market/sqmarket-medium.woff") format("woff");
+			url("https://cdn2.editmysite.com/fonts/SQ_Market/sqmarket-medium.woff2") format("woff2"),
+			url("https://cdn2.editmysite.com/fonts/SQ_Market/sqmarket-medium.woff") format("woff");
 	}
 </style>
 
