set up formspree email form

--- a/web/contact.html
+++ b/web/contact.html
@@ -224,7 +224,9 @@ body.wsite-background {background-attachment: fixed !important;}.wsite-backgroun
 <div style="height: 10px; overflow: hidden;"></div></div>
 
 <div>
-	<form enctype="multipart/form-data" action="http://www.thairapymelville.com/weebly/apps/formSubmit.php" method="POST" id="form-608007415352080735">
+
+	<form action="https://formspree.io/mledpnro" method="POST" name="contactForm" id="form-608007415352080735">
+		<input type="hidden" name="_subject" value="Website Contact" />
 		<div id="608007415352080735-form-parent" class="wsite-form-container"
 				 style="margin-top:10px;">
 			<ul class="formlist" id="608007415352080735-form-list">
@@ -232,11 +234,11 @@ body.wsite-background {background-attachment: fixed !important;}.wsite-backgroun
 				<label class="wsite-form-label">Name <span class="form-required">*</span></label>
 				<div style="clear:both;"></div>
 				<div class="wsite-form-input-container wsite-form-left wsite-form-input-first-name">
-					<input aria-required="true" id="input-209293740744369159" class="wsite-form-input wsite-input" placeholder="First" type="text" name="_u209293740744369159[first]" />
+					<input aria-required="true" id="input-209293740744369159" class="wsite-form-input wsite-input" placeholder="First" type="text" name="firstName" />
 					<label class="wsite-form-sublabel" for="input-209293740744369159">First</label>
 				</div>
 				<div class="wsite-form-input-container wsite-form-right wsite-form-input-last-name">
-					<input aria-required="true" id="input-209293740744369159-1" class="wsite-form-input wsite-input" placeholder="Last" type="text" name="_u209293740744369159[last]" />
+					<input aria-required="true" id="input-209293740744369159-1" class="wsite-form-input wsite-input" placeholder="Last" type="text" name="lastName" />
 					<label class="wsite-form-sublabel" for="input-209293740744369159-1">Last</label>
 				</div>
 				<div id="instructions-209293740744369159" class="wsite-form-instructions" style="display:none;"></div>
@@ -246,7 +248,7 @@ body.wsite-background {background-attachment: fixed !important;}.wsite-backgroun
 <div><div class="wsite-form-field" style="margin:5px 0px 5px 0px;">
 				<label class="wsite-form-label" for="input-392269704262441586">Email <span class="form-required">*</span></label>
 				<div class="wsite-form-input-container">
-					<input aria-required="true" id="input-392269704262441586" class="wsite-form-input wsite-input wsite-input-width-370px" type="text" name="_u392269704262441586" />
+					<input aria-required="true" id="input-392269704262441586" class="wsite-form-input wsite-input wsite-input-width-370px" type="email" name="_replyto" />
 				</div>
 				<div id="instructions-392269704262441586" class="wsite-form-instructions" style="display:none;"></div>
 			</div></div>
@@ -254,23 +256,17 @@ body.wsite-background {background-attachment: fixed !important;}.wsite-backgroun
 <div><div class="wsite-form-field" style="margin:5px 0px 5px 0px;">
 				<label class="wsite-form-label" for="input-248541984416913828">Comment <span class="form-required">*</span></label>
 				<div class="wsite-form-input-container">
-					<textarea aria-required="true" id="input-248541984416913828" class="wsite-form-input wsite-input wsite-input-width-370px" name="_u248541984416913828" style="height: 200px"></textarea>
+					<textarea aria-required="true" id="input-248541984416913828" class="wsite-form-input wsite-input wsite-input-width-370px" name="comment" style="height: 200px"></textarea>
 				</div>
 				<div id="instructions-248541984416913828" class="wsite-form-instructions" style="display:none;"></div>
 			</div></div>
 			</ul>
 			
 		</div>
-		<div style="display:none; visibility:hidden;">
-			<input type="hidden" name="wsite_subject" />
-		</div>
 		<div style="text-align:left; margin-top:10px; margin-bottom:10px;">
-			<input type="hidden" name="form_version" value="2" />
-			<input type="hidden" name="wsite_approved" id="wsite-approved" value="approved" />
-			<input type="hidden" name="ucfid" value="608007415352080735" />
-			<input type="hidden" name="recaptcha_token"/>
+
 			<input type="submit" role="button" aria-label="Submit" value="Submit" style="position:absolute;top:0;left:-9999px;width:1px;height:1px" />
-			<a class="wsite-button">
+			<a class="wsite-button" onclick="document.contactForm.submit()">
 				<span class="wsite-button-inner">Submit</span>
 			</a>
 		</div>
