fix hamburger toggle for mobile

--- a/web/services.html
+++ b/web/services.html
@@ -79,9 +79,9 @@
 .wsite-background {background-image: url("uploads/1/2/5/7/125784283/background-images/1404200096.jpg") !important;background-repeat: no-repeat !important;background-position: 25.00% 17.21% !important;background-size: 100% !important;background-color: transparent !important;}
 body.wsite-background {background-attachment: fixed !important;}.wsite-background.wsite-custom-background{ background-size: cover !important}
 </style>
-		
+<script src="js/nav.js"></script>		
 	</head>
-	<body class="header-page  wsite-theme-light  wsite-page-services"><div class="wrapper">
+	<body id="body" class="header-page  wsite-theme-light  wsite-page-services"><div class="wrapper">
 		<div class="header-wrap">
 			<div class="nav-wrap">
 				<div id="logo"><span class="wsite-logo">
@@ -93,7 +93,7 @@ body.wsite-background {background-attachment: fixed !important;}.wsite-backgroun
 	</a>
 
 </span></div>
-				<a class="hamburger" aria-label="Menu" href="#"><span></span></a>
+				<a class="hamburger" aria-label="Menu" onclick="toggleHamburgerSlide();"><span></span></a>
 				<div class="menu">
 					<div class="container">
 						<div class="search"></div>
