--- a/web/services1.html
+++ b/web/services1.html
@@ -82,9 +82,9 @@ body.wsite-background {background-attachment: fixed !important;}.wsite-backgroun
 </style>
 		
 		
-		
+<script src="js/nav.js"></script>		
 	</head>
-	<body class="header-page  wsite-theme-light  wsite-page-services1"><div class="wrapper">
+	<body id="body" class="header-page  wsite-theme-light  wsite-page-services1"><div class="wrapper">
 		<div class="header-wrap">
 			<div class="nav-wrap">
 				<div id="logo"><span class="wsite-logo">
@@ -96,7 +96,7 @@ body.wsite-background {background-attachment: fixed !important;}.wsite-backgroun
 	</a>
 
 </span></div>
-				<a class="hamburger" aria-label="Menu" href="#"><span></span></a>
+				<a class="hamburger" aria-label="Menu" onclick="toggleHamburgerSlide();"><span></span></a>
 				<div class="menu">
 					<div class="container">
 						<div class="search"></div>
