--- a/web/whats-new.html
+++ b/web/whats-new.html
@@ -81,9 +81,9 @@ body.wsite-background {background-attachment: fixed !important;}.wsite-backgroun
 </style>
 		
 		
-		
+<script src="js/nav.js"></script>			
 	</head>
-	<body class="no-header-page wsite-theme-light  wsite-page-whats-new wsite-blog-index"><div class="wrapper">
+	<body id="body" class="no-header-page wsite-theme-light  wsite-page-whats-new wsite-blog-index"><div class="wrapper">
     <div class="header-wrap">
       <div class="nav-wrap">
         <div id="logo"><span class="wsite-logo">
@@ -95,7 +95,7 @@ body.wsite-background {background-attachment: fixed !important;}.wsite-backgroun
 	</a>
 
 </span></div>
-        <a class="hamburger" aria-label="Menu" href="#"><span></span></a>
+        <a class="hamburger" aria-label="Menu" onclick="toggleHamburgerSlide();"><span></span></a>
         <div class="menu">
           <div class="container">
             <div class="search"></div>
